Trim comments added by the state-machine, reader and bench commits
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>